completed put and get by ID route
