# models/user.js
@@ -55,4 +55,26 @@ userSchema.pre("save", (next) => {
   });
 });
 
+userSchema.pre("updateOne", function (next) {
+  // only hash the password if it has been modified (or is new)
+  const password = this.getUpdate().$set.password;
+  const self = this;
+
+  if (!password) {
+    return next();
+  }
+
+  bcrypt.genSalt(saltRounds, function (err, salt) {
+    if (err) return next(err);
+
+    bcrypt.hash(password, salt, async function (err, hash) {
+      if (err) return next(err);
+
+      self.getUpdate().$set.password = hash;
+
+      next();
+    });
+  });
+});
+
 module.exports = mongoose.model("User", userSchema);
