# routes/swagger-output.json
@@ -5,10 +5,10 @@
     "description": "A Blog API that allows authors to publish posts and comment on other posts",
     "version": "1.0.0"
   },
-  "host": "blog-api-group-3.herokuapp.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -26,7 +26,11 @@
       "get": {
         "description": "",
         "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "post": {
         "description": "Adds a new User",
@@ -95,19 +99,72 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "put": {
-        "description": "",
+        "description": "Update a User",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "User",
+            "in": "body",
+            "description": "Update a User",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "firstName": {
+                  "type": "string",
+                  "example": "Shawn"
+                },
+                "lastName": {
+                  "type": "string",
+                  "example": "Potter"
+                },
+                "age": {
+                  "type": "number",
+                  "example": 42
+                },
+                "email": {
+                  "type": "string",
+                  "example": "professor@byui.edu"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "Potter11?"
+                },
+                "profession": {
+                  "type": "string",
+                  "example": "Professor"
+                }
+              },
+              "required": [
+                "firstName",
+                "lastName",
+                "age",
+                "email",
+                "password",
+                "profession"
+              ]
+            }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "User successfully updated"
+          },
+          "422": {
+            "description": "Please provide information to be updated, User does not exist, No update was made, Invalid user ID"
+          }
+        }
       },
       "delete": {
         "description": "",
